// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PdapDropdown > should be accessible with keyboard 1`] = `
<div class="pdap-dropdown" role="presentation">
  <pdap-button-stub aria-controls="test-dropdown" aria-expanded="false" aria-haspopup="true" class="pdap-dropdown-trigger" disabled="false" intent="tertiary" isloading="false"></pdap-button-stub>
  <transition-stub appear="true" css="true" name="dropdown" persisted="true">
    <div aria-hidden="true" class="pdap-dropdown-content" id="test-dropdown" role="menu" style="display: none;">
      <ul>
        <li>Option 1</li>
        <li>Option 2</li>
        <li>Option 3</li>
      </ul>
    </div>
  </transition-stub>
</div>
`;

exports[`PdapDropdown > should open and close dropdown correctly 1`] = `
<div class="pdap-dropdown" role="presentation">
  <pdap-button-stub aria-controls="test-dropdown" aria-expanded="false" aria-haspopup="true" class="pdap-dropdown-trigger" disabled="false" intent="tertiary" isloading="false"></pdap-button-stub>
  <transition-stub appear="true" css="true" name="dropdown" persisted="true">
    <div aria-hidden="true" class="pdap-dropdown-content" id="test-dropdown" role="menu" style="display: none;">
      <ul>
        <li>Option 1</li>
        <li>Option 2</li>
        <li>Option 3</li>
      </ul>
    </div>
  </transition-stub>
</div>
`;

exports[`PdapDropdown > should respect disabled prop 1`] = `
<div class="pdap-dropdown" role="presentation">
  <pdap-button-stub aria-controls="test-dropdown" aria-expanded="false" aria-haspopup="true" class="pdap-dropdown-trigger pointer-events-none cursor-not-allowed" disabled="true" intent="tertiary" isloading="false"></pdap-button-stub>
  <transition-stub appear="true" css="true" name="dropdown" persisted="true">
    <div aria-hidden="true" class="pdap-dropdown-content" id="test-dropdown" role="menu" style="display: none;">
      <ul>
        <li>Option 1</li>
        <li>Option 2</li>
        <li>Option 3</li>
      </ul>
    </div>
  </transition-stub>
</div>
`;

exports[`PdapDropdown > should respect the triggerOn prop 1`] = `
<div class="pdap-dropdown" role="presentation">
  <pdap-button-stub aria-controls="test-dropdown" aria-expanded="false" aria-haspopup="true" class="pdap-dropdown-trigger" disabled="false" intent="tertiary" isloading="false"></pdap-button-stub>
  <transition-stub appear="true" css="true" name="dropdown" persisted="true">
    <div aria-hidden="true" class="pdap-dropdown-content" id="test-dropdown" role="menu" style="display: none;">
      <ul>
        <li>Option 1</li>
        <li>Option 2</li>
        <li>Option 3</li>
      </ul>
    </div>
  </transition-stub>
</div>
`;
